@@ -1,3 +1,9 @@
+2015-07-09  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>
+
+	* xetex.web: Added \pdfmdfivesum, version 0.99993.
+	* xetex.defines: Added getmd5sum().
+	* am/xetex.am: Added libmd5.
+
 2015-06-22  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* am/xetex.am: Use $(tie_c).
